VM crashes with assert "Ensure we don't compile before compilebroker init"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b112
    • b120

      Since JDK 9 b112, the VM crashes if -Xcomp and -XX:TieredStopAtLevel=0 are specified:

      # Internal Error (/oracle/full_jdk_build/hotspot/src/share/vm/compiler/compileBroker.cpp:1045), pid=18294, tid=18295
      # assert(comp != __null) failed: Ensure we don't compile before compilebroker init

      Stack: [0x00007f5771f10000,0x00007f5772011000], sp=0x00007f577200f390, free space=1020k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x139e98f] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18f
      V [libjvm.so+0x139f6fa] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x4a
      V [libjvm.so+0x93be9a] report_vm_error(char const*, int, char const*, char const*, ...)+0xea
      V [libjvm.so+0x8d2cc8] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, char const*, Thread*)+0xe8
      V [libjvm.so+0xc1ab91] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x171
      V [libjvm.so+0xbd3470] InstanceKlass::call_class_initializer_impl(instanceKlassHandle, Thread*)+0x2a0
      V [libjvm.so+0xbd377a] InstanceKlass::call_class_initializer(Thread*)+0x7a
      V [libjvm.so+0xbd81f7] InstanceKlass::initialize_impl(instanceKlassHandle, Thread*)+0x357
      V [libjvm.so+0xbd88d3] InstanceKlass::initialize(Thread*)+0xd3
      V [libjvm.so+0x130e6c2] initialize_class(Symbol*, Thread*)+0xc2
      V [libjvm.so+0x1315c6e] Threads::initialize_jsr292_core_classes(Thread*)+0x4e
      V [libjvm.so+0x131d5ca] Threads::create_vm(JavaVMInitArgs*, bool*)+0x67a
      V [libjvm.so+0xce6cae] JNI_CreateJavaVM+0x8e
      C [libjli.so+0x3923] JavaMain+0x83
      C [libpthread.so.0+0x8182] start_thread+0xc2

            Assignee:
            Nils Eliasson (Inactive)
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: