8154151: VM crashes with assert "Ensure we don't compile before compilebroker init"

Drop compiles submitted with complevel_none

Reviewed-by: kvn